--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   </header>
 
   <div ng-view>
-
   </div>
   <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.2/angular.min.js"></script>
+  <script src="https://code.angularjs.org/1.2.22/angular-sanitize.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.2/angular-route.min.js"></script>
 
   <script src="js/app.js"></script>
